R1.0.0        01-29-2020  Kukhee Kim
              build with yamlLoader R2.1.0, cpsw/framework R4.4.1, commonATCA R1.0.0 and buildroot-2019.08

ATCACommon:   11-08-2019  Kukhee Kim
              Initial release, Separate out from RFCommon