@@ -1,3 +1,6 @@
+R1.1.0        03-02-2020  Kukhee Kim 
+              Use a separated thread for each stream
+
 R1.0.0        01-29-2020  Kukhee Kim
               build with yamlLoader R2.1.0, cpsw/framework R4.4.1, commonATCA R1.0.0 and buildroot-2019.08
 
